Migrate users of QNameModule.create()
Mass-migrate to replacement methods, reducing quite a bit of verbosity.

Change-Id: I0ae704fbc7c753e4767134840b134ad72077a37e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>